test_programs/compile_failure/access_private_dependency_item/src/main.nr
use foo::bar::baz;

fn main() {
    foo::bar::baz();
    baz();
}
